[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Camera/Camera.gd" type="Script" id=1]
[ext_resource path="res://AbstractClasses/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Camera/States/Follow.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Camera/States/MoveTo.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Camera/States/Stop.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Camera/States/Shake.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Camera/DebugState.gd" type="Script" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[node name="Camera" type="Camera2D"]
position = Vector2( 480, 270 )
rotating = true
current = true
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
default_state = "Follow"

[node name="Stop" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Stop"]
one_shot = true

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource( 3 )

[node name="DebugLayer" type="CanvasLayer" parent="StateMachine/Follow"]

[node name="Control" type="Control" parent="StateMachine/Follow/DebugLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StateMachine/Follow/DebugLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BordersAnticip" type="Label" parent="StateMachine/Follow/DebugLayer/Control/VBoxContainer"]
margin_right = 126.0
margin_bottom = 14.0
text = "Border anticipated: "

[node name="MoveTo" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Shake" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateMachine/Shake"]
one_shot = true

[node name="Free" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="AveragePos" type="Position2D" parent="."]
visible = false
z_index = 999

[node name="Sprite" type="Sprite" parent="AveragePos"]
modulate = Color( 1, 0, 0, 0.407843 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="AveragePos"]
margin_right = 40.0
margin_bottom = 14.0
text = "AveragePlayerPos"

[node name="Pivot" type="Position2D" parent="."]
visible = false
z_index = 999

[node name="Sprite" type="Sprite" parent="Pivot"]
modulate = Color( 0.00784314, 0, 1, 0.341176 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Pivot"]
margin_right = 40.0
margin_bottom = 14.0
text = "Pivot"

[node name="DebugLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="DebugLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.56763
margin_top = -1.18921
margin_right = 3.56763
margin_bottom = -1.18921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DebugLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -86.0
margin_right = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
margin_right = 36.0
margin_bottom = 14.0
text = "State:"

[node name="PosLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
margin_top = 18.0
margin_right = 36.0
margin_bottom = 32.0

[node name="ZoomLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
margin_top = 36.0
margin_right = 36.0
margin_bottom = 50.0

[node name="TopLimitLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 36.0
margin_bottom = 68.0

[node name="BottomLimitLabel" type="Label" parent="DebugLayer/Control/VBoxContainer"]
margin_top = 72.0
margin_right = 36.0
margin_bottom = 86.0
